[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "steamutils"
version = "0.1.0"
authors = [
    { name = "Derek Cochran", email = "derek@derekcochran.dev" }
]
description = "CLI for interating with Steam API"
readme = "README.md"
license = { text = "MIT" }
keywords = ["steam", "cli"]
dependencies = ["click", "steam", "platformdirs"]

[project.scripts]
steamutils = "steamutils:cli"

[tool.setuptools]
py-modules = ["steamutils"]